# rsocks

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
rsocks-client/: Cargo.toml
rsocks-client/src/: client.rs
rsocks-proto/: Cargo.toml
rsocks-proto/src/: dns.rs  lib.rs  options.rs  packet.rs
rsocks-proto/src/protocol/: mod.rs  v4.rs  v5.rs
rsocks-server/: Cargo.toml
rsocks-server/src/: server.rs
