[package]
name = "rsocks"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
repository = "https://github.com/10fish/rsocks"
license-file = "LICENSE"
keywords = ["proxy", "socks5", "socks4", "network"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["rsocks-proto", "rsocks-server", "rsocks-client"]


[dependencies]
rsocks-server = {path = "./rsocks-server"}
rsocks-client = {path = "./rsocks-client"}
rsocks-proto = {path = "./rsocks-proto"}
