[package]
name = "rsocks-proto"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/10fish/rsocks"
keywords = ["proxy", "socks5", "socks4", "network"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
clap = "3"
config = "0.11.0"
env_logger = "0.9.0"
futures = "0.3.19"
lazy_static = "1.4.0"
log = "0.4.14"
nom = "7.1.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
trust-dns-resolver = "0.20.3"
